--- a/application/qmxz/view/special/index.html
+++ b/application/qmxz/view/special/index.html
@@ -20,7 +20,7 @@
     <div class="layui-form-item layui-inline">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-inline" style="width: 265px;">
-            <input name="create_time" id='create_time' value="{$Think.get.create_time|default=''}" placeholder="请选择提现时间" class="layui-input">
+            <input name="create_time"  autocomplete="off" id='create_time' value="{$Think.get.create_time|default=''}" placeholder="请选择提现时间" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item layui-inline">
