--- a/application/qmxz/view/prize/form.html
+++ b/application/qmxz/view/prize/form.html
@@ -1,6 +1,6 @@
 <form class="layui-form layui-box modal-form-box" action="{:request()->url()}" data-auto="true" method="post">
 	<div class="layui-form-item">
-        <label class="layui-form-label">礼物名称</label>
+        <label class="layui-form-label">名称</label>
         <div class="layui-input-block">
             <input type="text" autofocus name="name" required="required" value='{$vo.name|default=""}' pattern="" title="请输入礼物名称" placeholder="请输入礼物名称" class="layui-input">
         </div>
