--- a/application/qmxz/view/special/index.html
+++ b/application/qmxz/view/special/index.html
@@ -6,7 +6,7 @@
 {block name="content"}
 <div class="layui-form-item layui-inline">
     <!--{if auth("$classuri/add")}-->
-    <button data-modal='{:url("$classuri/add")}' data-title="添加整点场" class='layui-btn layui-btn-sm'>添加</button>
+    <button data-modal='{:url("$classuri/add")}' data-title="添加" class='layui-btn layui-btn-sm'>添加</button>
     <!--{/if}-->
 </div>
 <div class="layui-form-item layui-inline" style="margin-left: 30px;">
