--- a/application/qmxz/view/topic/form.html
+++ b/application/qmxz/view/topic/form.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">上传图片</label>
+        <label class="layui-form-label">图片</label>
         <div class="layui-input-block">
             <div class="layui-row">
                 <div class="layui-col-md6">
