--- a/application/qmxz/view/special/form.html
+++ b/application/qmxz/view/special/form.html
@@ -1,6 +1,6 @@
 <form class="layui-form layui-box modal-form-box" action="{:request()->url()}" data-auto="true" method="post">
 	<div class="layui-form-item">
-        <label class="layui-form-label">整点场标题</label>
+        <label class="layui-form-label">标题</label>
         <div class="layui-input-block">
             <input type="text" autofocus name="title" required="required" value='{$vo.title|default=""}' pattern="" title="整点场标题" placeholder="整点场标题" class="layui-input">
         </div>
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="layui-form-item" id="test">
-        <label class="layui-form-label">轮播图</label>
+        <label class="layui-form-label">轮播图地址</label>
         <div class="layui-input-block ">
             <div class="layui-row arr">
                 <div class="layui-col-md9">
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">显示时间</label>
+        <label class="layui-form-label">展示时间</label>
         <div class="layui-input-block">
             <input name="display_time" id='display_time' value="{$vo.display_time|default=''}" placeholder="请选择时间" class="layui-input">
         </div>
