--- a/application/qmxz/view/special_word_warehouse/edit.html
+++ b/application/qmxz/view/special_word_warehouse/edit.html
@@ -1,6 +1,6 @@
 <form class="layui-form layui-box modal-form-box" action="{:request()->url()}" data-auto="true" method="post">
     <div class="layui-form-item">
-        <label class="layui-form-label">整点场选择</label>
+        <label class="layui-form-label">场次</label>
         <div class="layui-input-block">
                 <select id="special_id" name="special_warehouse_id" lay-verify="required"  class="layui-select" lay-search>
                     <option value="">- 请选择 -</option>
