--- a/application/qmxz/view/topic_cate/index.html
+++ b/application/qmxz/view/topic_cate/index.html
@@ -7,7 +7,7 @@
 <div class="layui-form-item layui-inline">
     <div class="layui-form-item layui-inline">
         <!--{if auth("$classuri/add")}-->
-        <button data-modal='{:url("$classuri/add")}' data-title="添加话题" class='layui-btn layui-btn-sm layui-bg-green'>添加</button>
+        <button data-modal='{:url("$classuri/add")}' data-title="添加" class='layui-btn layui-btn-sm layui-bg-green'>添加</button>
         <!--{/if}-->
     </div>
 
