--- a/application/qmxz/view/topic_word/index.html
+++ b/application/qmxz/view/topic_word/index.html
@@ -7,7 +7,7 @@
 <div class="layui-form-item layui-inline">
     <div class="layui-form-item layui-inline">
         <!--{if auth("$classuri/add")}-->
-        <button data-modal='{:url("$classuri/add")}' data-title="添加话题" class='layui-btn layui-btn-sm layui-bg-green'>添加</button>
+        <button data-modal='{:url("$classuri/add")}' data-title="添加" class='layui-btn layui-btn-sm layui-bg-green'>添加</button>
         <!--{/if}-->
     </div>
 
@@ -63,7 +63,7 @@
     	<tr>
             <th class='text-left nowrap'>操作</th>
             <th class='text-left nowrap'>ID</th>
-            <th class='text-left nowrap'>话题ID</th>
+            <th class='text-left nowrap'>所属话题</th>
             <th class='text-left nowrap'>标题</th>
             <th class='text-left nowrap'>描述</th>
             <th class='text-left nowrap'>选项</th>
