--- a/application/qmxz/view/topic_word/edit.html
+++ b/application/qmxz/view/topic_word/edit.html
@@ -15,6 +15,12 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">小标签</label>
+        <div class="layui-input-block">
+            <input type="text" autofocus name="small_label" required="required" value='{$vo.small_label|default=""}' pattern="" title="小标签" placeholder="小标签" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">标题</label>
         <div class="layui-input-block">
             <input type="text" autofocus name="title" required="required" value='{$vo.title|default=""}' pattern="" title="标题" placeholder="标题" class="layui-input">
