--- a/application/qmxz/view/topic_word/index.html
+++ b/application/qmxz/view/topic_word/index.html
@@ -6,11 +6,43 @@
 {block name="content"}
 <div class="layui-form-item layui-inline">
     <div class="layui-form-item layui-inline">
+        <a href="/static/excel/template_topic_word.xlsx">表格模板</a>
+    </div>
+    <div class="layui-form-item layui-inline">
+        <button type="button" class="layui-btn layui-btn-sm layui-bg-blue" id="test1">
+            <i class="layui-icon">&#xe67c;</i>批量导入
+        </button>
+    </div>
+    <div class="layui-form-item layui-inline">
         <!--{if auth("$classuri/add")}-->
         <button data-modal='{:url("$classuri/add")}' data-title="添加" class='layui-btn layui-btn-sm layui-bg-green'>添加</button>
         <!--{/if}-->
     </div>
-
+    <script>
+    layui.use('upload', function(){
+      var upload = layui.upload;
+       
+      //执行实例
+      var uploadInst = upload.render({
+        elem: '#test1' //绑定元素
+        ,url: '/qmxz/topic_word/upload' //上传接口
+        ,method: 'post'
+        ,exts : 'xlsx'
+        ,done: function(res){
+            if(res.code == 1){
+                layer.alert(res.msg, {title: '<i class="layui-icon">&#xe60b;</i>提示',}, function(index, item){
+                    location.reload();
+                });
+            }else{
+                layer.alert(res.msg);
+            }
+        }
+        ,error: function(){
+          //请求异常回调
+        }
+      });
+    });
+    </script>
 </div>
 <div class="layui-form-item layui-inline">
 <form class="layui-form layui-form-pane form-search" action="{:request()->url()}" onsubmit="return false" method="get">
@@ -64,6 +96,7 @@
             <th class='text-left nowrap'>操作</th>
             <th class='text-left nowrap'>ID</th>
             <th class='text-left nowrap'>所属话题</th>
+            <th class='text-left nowrap'>小标签</th>
             <th class='text-left nowrap'>标题</th>
             <th class='text-left nowrap'>描述</th>
             <th class='text-left nowrap'>选项</th>
@@ -92,6 +125,9 @@
             </td>
             <td class='text-left nowrap'>
                 <?php echo isset($topic_list[$vo['topic_id']]) ? $topic_list[$vo['topic_id']] : ''; ?>
+            </td>
+            <td class='text-left nowrap'>
+                {$vo.small_label}
             </td>
             <td class='text-left nowrap'>
                 {$vo.title}
