--- a/application/admin/view/tpfig/index.html
+++ b/application/admin/view/tpfig/index.html
@@ -18,6 +18,12 @@
         </div>
     </div>
     <div class="layui-form-item layui-inline">
+        <label class="layui-form-label">定义搜索</label>
+        <div class="layui-input-inline">
+            <input name="index" value="{$Think.get.index|default=''}" placeholder="请输入想要搜索的关键字" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item layui-inline">
         <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> 搜 索</button>
     </div>
 </form>
