--- a/application/qmxz/view/task/index.html
+++ b/application/qmxz/view/task/index.html
@@ -67,8 +67,7 @@
                {/if}
             </td>
             <td class='text-left nowrap'>
-
-               <img src="{$vo.img_url}" width="50">
+                <img id="img" data-tips-image style="height:auto;max-height:50px;min-width:50px" src='{$vo.img_url}' />
             </td>
 
           
