--- a/application/qmxz/view/goods/index.html
+++ b/application/qmxz/view/goods/index.html
@@ -14,18 +14,18 @@
 <div class="layui-form-item layui-inline" style="margin-left: 30px;">
 
 <form class="layui-form layui-form-pane form-search" action="{:request()->url()}" onsubmit="return false" method="get">
-
     <div class="layui-form-item layui-inline">
         <label class="layui-form-label">产品分类</label>
         <div class="layui-input-inline">
-            <select id="cate" lay-filter="type" name="cate" class="layui-select" >
-                    <option value="">- 请选择分类 -</option>
-
-                    <!--{foreach $cates as $key=>$st}-->
-
-                    <option value="{$st.id}">- {$st.cate_name} -</option>
-
-                    <!--{/foreach}-->
+            <select name='cate' class='layui-select' lay-search="">
+                <option value=''> - 请选择分类 -</option>
+                <!--{foreach $cates as $k => $v}-->
+                <!--{if $Think.get.cate == $v.id}-->
+                <option selected="selected" value='{$v.id}'> - {$v.cate_name} - </option>
+                <!--{else}-->
+                <option value='{$v.id}'> - {$v.cate_name} - </option>
+                <!--{/if}-->
+                <!--{/foreach}-->
             </select>
         </div>
     </div>
@@ -40,14 +40,18 @@
         <label class="layui-form-label">推荐位</label>
         <div class="layui-input-inline">
             <select name='onsale' class='layui-select' lay-search="">
-                <option value=''> - 所有状态 -</option>
-
-                <option selected="selected" value='1'> - 推荐商品 - </option>
-
-                <option value='0'> - 非推荐商品 - </option>
+                <option value=''> - 请选择分类 -</option>
+                <!--{foreach [0 => '非推荐商品', 1=> '推荐商品'] as $k => $v}-->
+                <!--{if($Think.get.onsale != '' && $Think.get.onsale == $k)}-->
+                <option selected="selected" value='{$k}'> - {$v} - </option>
+                <!--{else}-->
+                <option value='{$k}'> - {$v} - </option>
+                <!--{/if}-->
+                <!--{/foreach}-->
             </select>
         </div>
     </div>
+
     <div class="layui-form-item layui-inline">
         <label class="layui-form-label">合作方</label>
         <div class="layui-input-inline">
