--- a/application/qmxz/view/goods/index.html
+++ b/application/qmxz/view/goods/index.html
@@ -155,9 +155,9 @@
             </td>
             <td class='text-left nowrap'>
                  {if condition="$vo.is_index == 1"}
-                 <span style="color:green">是</span>
+                 <span style="color:red">是</span>
                  {else}
-                 <span style="color:red">否</span> 
+                 <span style="color:green">否</span> 
                  {/if}
             </td>
             <td class='text-left nowrap'>
