--- a/application/qmxz/view/special/form.html
+++ b/application/qmxz/view/special/form.html
@@ -11,20 +11,43 @@
             <input type="text" autofocus name="des" value='{$vo.des|default=""}' required="required" pattern="" title="描述" placeholder="描述" class="layui-input">
         </div>
     </div>
-    <div class="layui-form-item">
+    <!-- <div class="layui-form-item">
         <label class="layui-form-label">图片地址</label>
         <div class="layui-input-block">
             <input type="text" autofocus name="img" value='{$vo.img|default=""}' required="required" pattern="" title="图片地址" placeholder="图片地址" class="layui-input">
         </div>
-    </div>
-    <div class="layui-form-item" id="test">
-        <label class="layui-form-label">轮播图地址</label>
-        <div class="layui-input-block ">
-            <div class="layui-row arr">
-                <div class="layui-col-md9">
-                    <input type="text" autofocus name="banners[]" required="required" value='' pattern="" title="" placeholder="请输入图片地址" class="layui-input">
+    </div> -->
+    <!-- <div class="layui-form-item">
+        <label class="layui-form-label">图片</label>
+        <div class="layui-input-block">
+            <div class="layui-row">
+                <div class="layui-col-md6">
+                    <input type="text" autofocus id="path" name="img" required="required" value='{$vo.img|default=""}' pattern="" title="图片地址" placeholder="图片地址" class="layui-input">
                 </div>
                 <div class="layui-col-md3">
+                    <div class="layui-upload" style="margin-left: 20px;">
+                        <button type="button" class="layui-btn" id="test1">上传图片</button>
+                    </div>
+                </div>
+                <div class="layui-col-md3">
+                    <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.img|default=""}' />
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="layui-form-item" id="test">
+        <label class="layui-form-label">轮播图地址</label>
+        <div class="layui-input-block">
+            <div class="layui-row arr">
+                <div class="layui-col-md6">
+                    <input type="text" autofocus name="banners[]" required="required" value='' pattern="" title="图片地址" placeholder="图片地址" class="layui-input">
+                </div>
+                <div class="layui-col-md3" style="width: inherit;">
+                    <div class="layui-upload" style="margin-left: 20px;">
+                        <button type="button" class="layui-btn" id="test2">上传图片</button>
+                    </div>
+                </div>
+                <div class="layui-col-md3" style="width: inherit;">
                     <button class="layui-btn add" style="margin-left: 10px;">添加</button>
                 </div>
             </div>
@@ -93,23 +116,104 @@
             });
 
         });
-
+        window.num = 3;
         $("#test").on('click', '.add', function(){
             var html = '<div class="layui-row arr">';
-            html += '<div class="layui-col-md9" style="margin-top:5px;">';
-            html += '<input type="text" autofocus name="banners[]" required="required" value="" pattern="" title="" placeholder="请输入图片地址" class="layui-input">';
-            html += '</div><div class="layui-col-md3" style="margin-top:5px;">';
-            //html += '<button class="layui-btn add" style="margin-left: 10px;">添加</button>';
-            html += '<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
-            html +='<div></div>';
-
+            html += '<div class="layui-col-md6">';
+            html += '<input type="text" autofocus name="banners[]" required="required" value="" pattern="" title="图片地址" placeholder="图片地址" class="layui-input">';
+            html += '</div>';
+            html += '<div class="layui-col-md3" style="width: inherit;">';
+            html +='<div class="layui-upload" style="margin-left: 20px;">';
+            html +='<button type="button" class="layui-btn" id="test'+window.num+'">上传图片</button>';
+            html +='</div>';
+            html +='</div>';
+            html +='<div class="layui-col-md3" style="width: inherit;">';
+            html +='<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
+            html +='</div>';
+            html +='</div>';
             $(this).parent().parent().parent().append(html);
             $("#test").children("div").children("div.arr").last().find("input").focus();
+            layui.use('upload', function(){
+                var test = "#test"+window.num;
+                var $ = layui.jquery
+                ,upload = layui.upload;
+
+                var uploadInst = upload.render({
+                    elem: test //绑定元素
+                    ,url: '/admin/img/upload' //上传接口
+                    ,method: 'post'
+                    ,exts : 'jpg|png|gif'
+                    ,done: function(res){
+                        if(res.code == 1){
+                            $(test).parent('div').parent('div').prev('div').find('input').val(res.path);
+                            layer.msg('图片已经上传到网宿云存储', {icon: 6});
+
+                        }else if(res.code == 0){
+                            layer.msg(res.msg);
+                        }else{
+                            layer.msg(res.error_msg);
+                        }
+                    }
+                });
+            });
+            window.num++;
         });
 
        $("#test").on('click', '.del', function(){
             $(this).parent().parent().remove();
         });
 
+    </script>
+    <script type="text/javascript">
+        layui.use('upload', function(){
+            var $ = layui.jquery
+            ,upload = layui.upload;
+
+            var uploadInst = upload.render({
+                elem: '#test1' //绑定元素
+                ,url: '/admin/img/upload' //上传接口
+                ,method: 'post'
+                ,exts : 'jpg|png|gif'
+                ,done: function(res){
+                    if(res.code == 1){
+                        $("#path").val(res.path);
+                        // $("#size").val(res.size);
+                        // $("#type").val(res.type);
+                        $("#img").attr('src', res.path);
+                        layer.msg('图片已经上传到网宿云存储', {icon: 6});
+
+                    }else if(res.code == 0){
+                        layer.msg(res.msg);
+                    }else{
+                        layer.msg(res.error_msg);
+                    }
+                }
+            });
+        });
+    </script>
+    <script type="text/javascript">
+        layui.use('upload', function(){
+            var $ = layui.jquery
+            ,upload = layui.upload;
+
+            var uploadInst = upload.render({
+                elem: '#test2' //绑定元素
+                ,url: '/admin/img/upload' //上传接口
+                ,method: 'post'
+                ,exts : 'jpg|png|gif'
+                ,done: function(res){
+                    if(res.code == 1){
+                        // $("#path").val(res.path);
+                        $('#test2').parent('div').parent('div').prev('div').find('input').val(res.path);
+                        layer.msg('图片已经上传到网宿云存储', {icon: 6});
+
+                    }else if(res.code == 0){
+                        layer.msg(res.msg);
+                    }else{
+                        layer.msg(res.error_msg);
+                    }
+                }
+            });
+        });
     </script>
 </form>
