--- a/application/qmxz/view/topic_word/edit.html
+++ b/application/qmxz/view/topic_word/edit.html
@@ -36,16 +36,14 @@
         <label class="layui-form-label">选项</label>
         <div class="layui-input-block ">
             <?php $options =  json_decode($vo['options']); ?>
-            {foreach $options as $k=>$v}
             <div class="layui-row arr">
                 <div class="layui-col-md9">
-                    <input type="text" autofocus name="options[]" required="required" value="{$v|default=''}" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">
+                    <input type="text" autofocus name="options[]" required="required" value="{$options.0|default=''}" pattern="" title="" placeholder="请输入选项值" class="layui-input">
                 </div>
                 <div class="layui-col-md3">
                     <button class="layui-btn add" style="margin-left: 10px;">添加</button>
                 </div>
             </div>
-            {/foreach}
         </div>
     </div>
     <div class="layui-form-item text-center">
@@ -65,6 +63,20 @@
             }else{
                 $("#string").hide();
                 $("#string").find('input').removeAttr('required');
+                var value = <?php echo json_encode(json_decode($vo['options'])); ?>;
+                for(var i = 0; i< value.length; i++){
+                    if(i > 0){
+                        var html = '<div class="layui-row arr">';
+                        html += '<div class="layui-col-md9" style="margin-top:5px;">';
+                        html += '<input type="text" autofocus name="options[]" required="required" value="'+ value[i] +'" pattern="" title="" placeholder="请输入选项值" class="layui-input">';
+                        html += '</div><div class="layui-col-md3" style="margin-top:5px;">';
+                        html += '<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
+                        html +='<div></div>';
+
+                        $("#test").children(".layui-input-block").append(html);
+                    }
+                    
+                }
             }
         });
 
