--- a/application/qmxz/view/goods/form.html
+++ b/application/qmxz/view/goods/form.html
@@ -105,6 +105,12 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">Appid</label>
+        <div class="layui-input-block">
+            <input type="text" autofocus name="partner_appid" value="" pattern="" title="" placeholder="合作伙伴小程序Appid" class="layui-input" style="width: 75%;">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">是否启用</label>
         <div style="width: 35%;" class="layui-input-block">
                 <select  name="status" class="layui-select">
