--- a/application/qmxz/view/goods/index.html
+++ b/application/qmxz/view/goods/index.html
@@ -97,12 +97,13 @@
 		<tr>
             <th class='text-left nowrap'>操作</th>
             <th class='text-left nowrap'>商品ID</th>
-            <th class='text-left nowrap'>商品图片</th>
             <th class='text-left nowrap'>商品名称</th>
+            <th class='text-left nowrap'>商品图片</th>
             <th class='text-left nowrap'>库存量</th>
             <th class='text-left nowrap'>所需金币</th>
             <th class='text-left nowrap'>所属分类</th>
             <th class='text-left nowrap'>合作方</th>
+            <th class='text-left nowrap'>Appid</th>
             <th class='text-left nowrap'>排序</th>
             <th class='text-left nowrap'>首页</th>
             <th class='text-left nowrap'>商品状态</th>
@@ -128,10 +129,10 @@
                 {$vo.id}
             </td>
             <td class='text-left nowrap'>
-                <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.img}' />
+                {$vo.title}
             </td>
             <td class='text-left nowrap'>
-                {$vo.title}
+                <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.img}' />
             </td>
             <td class='text-left nowrap'>
                 {$vo.stock}
@@ -149,6 +150,9 @@
                  {else}
                  <span style="color:red">是</span> 
                  {/if}
+            </td>
+            <td class='text-left nowrap'>
+                {$vo.partner_appid|default="暂无"}
             </td>
             <td class='text-left nowrap'>
                 {$vo.order}
