--- a/application/qmxz/view/topic_word/index.html
+++ b/application/qmxz/view/topic_word/index.html
@@ -82,6 +82,9 @@
     <div class="layui-form-item layui-inline">
         <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> 搜 索</button>
     </div>
+    <div class="layui-form-item layui-inline">
+        <a onclick="loopAddBase(this)" class="layui-btn">循环加基数</a>
+    </div>
 </form>
 </div>
 
@@ -150,5 +153,22 @@
     {if isset($page)}<p>{$page|raw}</p>{/if}
     <!--{/empty}-->
     <script>window.form.render();</script>
+    <script>
+        function loopAddBase(e){
+            console.log('loopAddBase')
+            $.ajax({
+                url: '/qmxz/topic_word/loopAddBase',
+                type: 'get',
+                dataType: 'json',
+                data: {},
+                success: function(res){
+                    console.log(res)
+                },
+                error: function(){
+                    console.log('fail');
+                }
+            })
+        }
+    </script>
 </form>
 {/block}
