--- a/application/qmxz/view/topic_word/index.html
+++ b/application/qmxz/view/topic_word/index.html
@@ -162,10 +162,13 @@
                 dataType: 'json',
                 data: {},
                 success: function(res){
-                    console.log(res)
+                    if(res.status == 1){
+                        layer.msg('success', {icon: 6});
+                    }
                 },
                 error: function(){
                     console.log('fail');
+                    layer.msg('fail', {icon: 5});
                 }
             })
         }
