--- a/application/qmxz/view/goods/edit.html
+++ b/application/qmxz/view/goods/edit.html
@@ -108,6 +108,12 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">跳转路劲</label>
+        <div class="layui-input-block">
+            <input type="text" autofocus name="jump_route" value="{$vo.jump_route}" pattern="" title="" placeholder="跳转路劲" class="layui-input" style="width: 75%;">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">是否启用</label>
         <div style="width: 35%;" class="layui-input-block">
                 <select  name="status" class="layui-select">
