--- a/application/qmxz/view/special_warehouse/edit.html
+++ b/application/qmxz/view/special_warehouse/edit.html
@@ -121,18 +121,18 @@
                         // $("#test").children(".layui-input-block").append(html);
                         var kk = parseInt(i) + 2;
                         var html = '<div class="layui-row arr">';
-                            html += '<div class="layui-col-md6">';
+                            html += '<div class="layui-col-md6" style="margin-top:4px;">';
                             html += '<input type="text" autofocus name="banners[]" required="required" value="'+ value[i] +'" pattern="" title="图片地址" placeholder="图片地址" class="layui-input">';
                             html += '</div>';
-                            html += '<div class="layui-col-md3" style="width: inherit;">';
+                            html += '<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
                             html +='<div class="layui-upload" style="margin-left: 20px;">';
                             html +='<button type="button" class="layui-btn" id="test'+kk+'">上传图片</button>';
                             html +='</div>';
                             html +='</div>';
-                            html +='<div class="layui-col-md3" style="width: inherit;">';
+                            html +='<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
                             html +='<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
                             html +='</div>';
-                            html +='<div class="layui-col-md3" style="width: inherit;">';
+                            html +='<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
                             html +='<img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src="'+ value[i] +'" />';
                             html +='</div>';
                             html +='</div>';
@@ -189,15 +189,15 @@
         window.num = value.length + 2;
         $("#test").on('click', '.add', function(){
             var html = '<div class="layui-row arr">';
-            html += '<div class="layui-col-md6">';
+            html += '<div class="layui-col-md6" style="margin-top:4px;">';
             html += '<input type="text" autofocus name="banners[]" required="required" value="" pattern="" title="图片地址" placeholder="图片地址" class="layui-input">';
             html += '</div>';
-            html += '<div class="layui-col-md3" style="width: inherit;">';
+            html += '<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
             html +='<div class="layui-upload" style="margin-left: 20px;">';
             html +='<button type="button" class="layui-btn" id="test'+window.num+'">上传图片</button>';
             html +='</div>';
             html +='</div>';
-            html +='<div class="layui-col-md3" style="width: inherit;">';
+            html +='<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
             html +='<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
             html +='</div>';
             html +='</div>';
