--- a/application/admin/view/tpfig/edit.html
+++ b/application/admin/view/tpfig/edit.html
@@ -37,15 +37,38 @@
         <label class="layui-form-label">值</label>
         <div class="layui-input-block ">
             <div id="string">
-                <input type="text" autofocus id="val_str" name="value" required="required" value="<?php if($vo['type'] == 1) { echo htmlentities($vo['value']); } else { echo ''; } ?>" pattern="" title="" placeholder="请输入配置值(字符串)" class="layui-input" style="width: 75%;">
+                <!-- <input type="text" autofocus id="val_str" name="value" required="required" value="<?php if($vo['type'] == 1) { echo htmlentities($vo['value']); } else { echo ''; } ?>" pattern="" title="" placeholder="请输入配置值(字符串)" class="layui-input" style="width: 75%;"> -->
+
+                <div class="layui-col-md6">
+                    <input type="text" autofocus  id="val_str" name="value" required="required" value="<?php if($vo['type'] == 1) { echo htmlentities($vo['value']); } else { echo ''; } ?>" pattern="" title="" placeholder="请输入配置值(字符串)" class="layui-input">
+                </div>
+                <div class="layui-col-md3" style="width: inherit;">
+                    <div class="layui-upload" style="margin-left: 20px;">
+                        <button type="button" class="layui-btn" id="test1">上传图片</button>
+                    </div>
+                </div>
             </div>
             <?php if($vo['type'] == 2) { $value =  json_decode($vo['value']); } ?>
             <div class="layui-row arr">
-                <div class="layui-col-md9">
+                <!-- <div class="layui-col-md9">
                     <input type="text" autofocus name="value_arr[]" required="required" value="{$value.0|default=''}" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">
                 </div>
                 <div class="layui-col-md3">
                     <button class="layui-btn add" style="margin-left: 10px;">添加</button>
+                </div> -->
+                <div class="layui-col-md6">
+                    <input type="text" autofocus name="value_arr[]" required="required" value="{$value.0|default=''}" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">
+                </div>
+                <div class="layui-col-md3" style="width: inherit;">
+                    <div class="layui-upload" style="margin-left: 20px;">
+                        <button type="button" class="layui-btn" id="test2">上传图片</button>
+                    </div>
+                </div>
+                <div class="layui-col-md3" style="width: inherit;">
+                    <button class="layui-btn add" style="margin-left: 10px;">添加</button>
+                </div>
+                <div class="layui-col-md3" style="width: inherit;">
+                    <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$value.0|default=""}' />
                 </div>
             </div>
         </div>
@@ -85,17 +108,65 @@
                 $("#string").hide();
                 $("#string").find('input').removeAttr('required');
 
+                // var value = <?php echo json_encode(json_decode($vo['value'])); ?>;
+                // for(var i = 0; i< value.length; i++){
+                //     if(i > 0){
+                //         var html = '<div class="layui-row arr">';
+                //         html += '<div class="layui-col-md9" style="margin-top:5px;">';
+                //         html += '<input type="text" autofocus name="value_arr[]" required="required" value="'+ value[i] +'" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">';
+                //         html += '</div><div class="layui-col-md3" style="margin-top:5px;">';
+                //         html += '<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
+                //         html +='<div></div>';
+
+                //         $("#test").children(".layui-input-block").append(html);
+                //     }
+                    
+                // }
+                
                 var value = <?php echo json_encode(json_decode($vo['value'])); ?>;
                 for(var i = 0; i< value.length; i++){
                     if(i > 0){
+                        var kk = parseInt(i) + 2;
                         var html = '<div class="layui-row arr">';
-                        html += '<div class="layui-col-md9" style="margin-top:5px;">';
-                        html += '<input type="text" autofocus name="value_arr[]" required="required" value="'+ value[i] +'" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">';
-                        html += '</div><div class="layui-col-md3" style="margin-top:5px;">';
-                        html += '<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
-                        html +='<div></div>';
+                            html += '<div class="layui-col-md6" style="margin-top:4px;">';
+                            html += '<input type="text" autofocus name="value_arr[]" required="required" value="'+ value[i] +'" pattern="" title="图片地址" placeholder="图片地址" class="layui-input">';
+                            html += '</div>';
+                            html += '<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
+                            html +='<div class="layui-upload" style="margin-left: 20px;">';
+                            html +='<button type="button" class="layui-btn" id="test'+kk+'">上传图片</button>';
+                            html +='</div>';
+                            html +='</div>';
+                            html +='<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
+                            html +='<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
+                            html +='</div>';
+                            html +='<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
+                            html +='<img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src="'+ value[i] +'" />';
+                            html +='</div>';
+                            html +='</div>';
+                            $("#test").children(".layui-input-block").append(html);
+                            layui.use('upload', function(){
+                                var test = "#test"+kk;
+                                var $ = layui.jquery
+                                ,upload = layui.upload;
 
-                        $("#test").children(".layui-input-block").append(html);
+                                var uploadInst = upload.render({
+                                    elem: test //绑定元素
+                                    ,url: '/admin/img/upload' //上传接口
+                                    ,method: 'post'
+                                    ,exts : 'jpg|png|gif'
+                                    ,done: function(res){
+                                        if(res.code == 1){
+                                            $(test).parent('div').parent('div').prev('div').find('input').val(res.path);
+                                            layer.msg('图片已经上传到网宿云存储', {icon: 6});
+
+                                        }else if(res.code == 0){
+                                            layer.msg(res.msg);
+                                        }else{
+                                            layer.msg(res.error_msg);
+                                        }
+                                    }
+                                });
+                            });
                     }
                     
                 }
@@ -121,22 +192,115 @@
 
         });
 
-        $("#test").on('click', '.add', function(){
-            var html = '<div class="layui-row arr" style="margin-top:5px">';
-            html += '<div class="layui-col-md9">';
-            html += '<input type="text" autofocus name="value_arr[]" required="required" value="" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">';
-            html += '</div><div class="layui-col-md3">';
-            //html += '<button class="layui-btn add" style="margin-left: 10px;">添加</button>';
-            html += '<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
-            html +='<div></div>';
+        // $("#test").on('click', '.add', function(){
+        //     var html = '<div class="layui-row arr" style="margin-top:5px">';
+        //     html += '<div class="layui-col-md9">';
+        //     html += '<input type="text" autofocus name="value_arr[]" required="required" value="" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">';
+        //     html += '</div><div class="layui-col-md3">';
+        //     //html += '<button class="layui-btn add" style="margin-left: 10px;">添加</button>';
+        //     html += '<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
+        //     html +='<div></div>';
 
+        //     $(this).parent().parent().parent().append(html);
+        //     //$(this).hide();
+        // });
+        
+
+        var value = <?php echo json_encode(json_decode($vo['value'])); ?>;
+        window.num = value.length + 2;
+        $("#test").on('click', '.add', function(){
+            var html = '<div class="layui-row arr">';
+            html += '<div class="layui-col-md6" style="margin-top:4px;">';
+            html += '<input type="text" autofocus name="value[]" required="required" value="" pattern="" title="图片地址" placeholder="图片地址" class="layui-input">';
+            html += '</div>';
+            html += '<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
+            html +='<div class="layui-upload" style="margin-left: 20px;">';
+            html +='<button type="button" class="layui-btn" id="test'+window.num+'">上传图片</button>';
+            html +='</div>';
+            html +='</div>';
+            html +='<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
+            html +='<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
+            html +='</div>';
+            html +='</div>';
             $(this).parent().parent().parent().append(html);
-            //$(this).hide();
+            $("#test").children("div").children("div.arr").last().find("input").focus();
+            layui.use('upload', function(){
+                var test = "#test"+window.num;
+                var $ = layui.jquery
+                ,upload = layui.upload;
+
+                var uploadInst = upload.render({
+                    elem: test //绑定元素
+                    ,url: '/admin/img/upload' //上传接口
+                    ,method: 'post'
+                    ,exts : 'jpg|png|gif'
+                    ,done: function(res){
+                        if(res.code == 1){
+                            $(test).parent('div').parent('div').prev('div').find('input').val(res.path);
+                            layer.msg('图片已经上传到网宿云存储', {icon: 6});
+
+                        }else if(res.code == 0){
+                            layer.msg(res.msg);
+                        }else{
+                            layer.msg(res.error_msg);
+                        }
+                    }
+                });
+            });
+            window.num++;
         });
 
        $("#test").on('click', '.del', function(){
             $(this).parent().parent().remove();
         });
 
+    </script>
+    <script type="text/javascript">
+        layui.use('upload', function(){
+            var $ = layui.jquery
+            ,upload = layui.upload;
+
+            var uploadInst = upload.render({
+                elem: '#test2' //绑定元素
+                ,url: '/admin/img/upload' //上传接口
+                ,method: 'post'
+                ,exts : 'jpg|png|gif'
+                ,done: function(res){
+                    if(res.code == 1){
+                        $('#test2').parent('div').parent('div').prev('div').find('input').val(res.path);
+                        layer.msg('图片已经上传到网宿云存储', {icon: 6});
+
+                    }else if(res.code == 0){
+                        layer.msg(res.msg);
+                    }else{
+                        layer.msg(res.error_msg);
+                    }
+                }
+            });
+        });
+    </script>
+    <script type="text/javascript">
+        layui.use('upload', function(){
+            var $ = layui.jquery
+            ,upload = layui.upload;
+
+            var uploadInst = upload.render({
+                elem: '#test1' //绑定元素
+                ,url: '/admin/img/upload' //上传接口
+                ,method: 'post'
+                ,exts : 'jpg|png|gif'
+                ,done: function(res){
+                    if(res.code == 1){
+                        $('#test1').parent('div').parent('div').prev('div').find('input').val(res.path);
+                        layer.msg('图片已经上传到网宿云存储', {icon: 6});
+
+                    }else if(res.code == 0){
+                        layer.msg(res.msg);
+                    }else{
+                        layer.msg(res.error_msg);
+                    }
+                }
+            });
+        });
     </script>
 </form>
