--- a/application/qmxz/view/special_warehouse/form.html
+++ b/application/qmxz/view/special_warehouse/form.html
@@ -127,15 +127,15 @@
         window.num = 3;
         $("#test").on('click', '.add', function(){
             var html = '<div class="layui-row arr">';
-            html += '<div class="layui-col-md6">';
+            html += '<div class="layui-col-md6" style="margin-top:4px;">';
             html += '<input type="text" autofocus name="banners[]" required="required" value="" pattern="" title="图片地址" placeholder="图片地址" class="layui-input">';
             html += '</div>';
-            html += '<div class="layui-col-md3" style="width: inherit;">';
+            html += '<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
             html +='<div class="layui-upload" style="margin-left: 20px;">';
             html +='<button type="button" class="layui-btn" id="test'+window.num+'">上传图片</button>';
             html +='</div>';
             html +='</div>';
-            html +='<div class="layui-col-md3" style="width: inherit;">';
+            html +='<div class="layui-col-md3" style="width: inherit;margin-top:4px;">';
             html +='<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
             html +='</div>';
             html +='</div>';
