--- a/application/qmxz/view/topic/form.html
+++ b/application/qmxz/view/topic/form.html
@@ -58,6 +58,20 @@
             <input type="num" autofocus name="order" required="required" value='{$vo.order|default=""}' pattern="" title="排序" placeholder="排序" class="layui-input">
         </div>
     </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">状态</label>
+        <div class="layui-input-block">
+                <select id="status" name="status" class="layui-select" style="width: 75%;">
+                    <!--{foreach [1=>'启用',0=>'禁用'] as $key=>$st}-->
+                    <!--{if (!isset($vo['status']) AND $key eq 1) OR (isset($vo['status']) AND $vo.status eq $key)}-->
+                    <option selected value="{$key}">- {$st} -</option>
+                    <!--{else}-->
+                    <option value="{$key}">- {$st} -</option>
+                    <!--{/if}-->
+                    <!--{/foreach}-->
+                </select>
+        </div>
+    </div>
     <div class="layui-form-item text-center">
         {if isset($vo['id'])}<input type='hidden' value='{$vo.id}' name='id'>{/if}
         <button class="layui-btn" type='submit'>保存数据</button>
