--- a/application/qmxz/view/topic/index.html
+++ b/application/qmxz/view/topic/index.html
@@ -48,6 +48,21 @@
         </div>
     </div>
     <div class="layui-form-item layui-inline">
+        <label class="layui-form-label">状态</label>
+        <div class="layui-input-inline">
+            <select name='status' class='layui-select' lay-verify="required" lay-search="">
+                <option value=''> - 全部 -</option>
+                <!--{foreach [0=>'禁用', 1=>'启用'] as $k => $v}-->
+                <!--{if($Think.get.status != '' && $Think.get.status == $k)}-->
+                <option selected="selected" value='{$k}'> - {$v} - </option>
+                <!--{else}-->
+                <option value='{$k}'> - {$v} - </option>
+                <!--{/if}-->
+                <!--{/foreach}-->
+            </select>
+        </div>
+    </div>
+    <div class="layui-form-item layui-inline">
         <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> 搜 索</button>
     </div>
 </form>
@@ -70,7 +85,8 @@
             <th class='text-left nowrap'>图片展示</th>
             <th class='text-left nowrap'>图片地址</th>
             <th class='text-left nowrap'>排序</th>
-            <th class='text-left nowrap'>时间</th>
+            <th class='text-left nowrap'>状态</th>
+            <!-- <th class='text-left nowrap'>时间</th> -->
             
     	</tr>
     	</thead>
@@ -87,6 +103,14 @@
                 {if auth("$classuri/del")}
                 <span class="text-explode">|</span>
                 <a data-update="{$vo.id}" data-field='delete' data-action='{:url("$classuri/del")}'>删除</a>
+                {/if}
+
+                {if $vo.status eq 1 and auth("$classuri/forbid")}
+                <span class="text-explode">|</span>
+                <a data-update="{$vo.id}" data-field='status' data-value='0' data-action='{:url("$classuri/forbid")}'>禁用</a>
+                {elseif auth("$classuri/resume")}
+                <span class="text-explode">|</span>
+                <a data-update="{$vo.id}" data-field='status' data-value='1' data-action='{:url("$classuri/resume")}'>启用</a>
                 {/if}
 
             </td>
@@ -117,8 +141,11 @@
                 {$vo.order}
             </td>
             <td class='text-left nowrap'>
-                {$vo.create_time|date='Y-m-d H:i:s'}
+                {if $vo.status eq 0}<span class="color-red">禁用</span>{elseif $vo.status eq 1}<span class="color-green">启用</span>{/if}
             </td>
+            <!-- <td class='text-left nowrap'>
+                {$vo.create_time|date='Y-m-d H:i:s'}
+            </td> -->
             
     	</tr>
     	<!--{/foreach}-->
