--- a/application/khj/view/goods/edit.html
+++ b/application/khj/view/goods/edit.html
@@ -41,43 +41,11 @@
         
     </div>
 
-    <div class="layui-form-item">
-        <label class="layui-form-label">商品库存</label>
-        <div class="layui-input-block">
-            <input type="text" autofocus name="stock" required="required" value={$vo.stock} pattern="" title="" placeholder="请输入商品库存量" class="layui-input" style="width: 75%;">
-        </div>
-    </div>
     
     <div class="layui-form-item">
-        <label class="layui-form-label">所需金币</label>
+        <label class="layui-form-label">价格</label>
         <div class="layui-input-block">
-            <input type="text" autofocus name="price" required="required" value={$vo.price} pattern="" title="" placeholder="兑换所需金币值" class="layui-input" style="width: 75%;">
-        </div>
-    </div>
-    
-    <div class="layui-form-item">
-        <label class="layui-form-label">首页推荐位</label>
-        <div style="width: 35%;" class="layui-input-block">
-                <select  name="onsale" class="layui-select">
-                	<!--{foreach [1=>'推荐',0=>'不推荐'] as $key=>$st}-->
-                	
-	                <option {if condition="$vo.onsale == $key"}selected{/if} value="{$key}">- {$st} -</option>
-	    
-                	<!--{/foreach}-->
-                </select>
-        </div>
-    </div>
-
-    <div class="layui-form-item">
-        <label class="layui-form-label">是否首页</label>
-        <div style="width: 35%;" class="layui-input-block">
-                <select  name="is_index" class="layui-select">
-                    <!--{foreach [0 => '否', 1=> '是'] as $key=>$st}-->
-                    
-                    <option {if condition="$vo.is_index == $key"}selected{/if} value="{$key}">- {$st} -</option>
-        
-                    <!--{/foreach}-->
-                </select>
+            <input type="text" autofocus name="price" required="required" value={$vo.price} pattern="" title="" placeholder="价格" class="layui-input" style="width: 75%;">
         </div>
     </div>
 
@@ -87,30 +55,11 @@
             <input type="text" autofocus name="order" required="required" value={$vo.order} pattern="" title="" placeholder="排序" class="layui-input" style="width: 75%;">
         </div>
     </div>
+
     <div class="layui-form-item">
-        <label class="layui-form-label">是否合作方</label>
-        <div style="width: 35%;" class="layui-input-block">
-                <select  name="is_partner" class="layui-select">
-                    <!--{foreach [1 => '非合作方', 2=> '是合作方'] as $key=>$st}-->
-                    <!--{if (!isset($vo['is_partner']) AND $key eq 1) OR (isset($vo['is_partner']) AND $vo.is_partner eq $key)}-->
-                    <option selected value="{$key}">- {$st} -</option>
-                    <!--{else}-->
-                    <option value="{$key}">- {$st} -</option>
-                    <!--{/if}-->
-                    <!--{/foreach}-->
-                </select>
-        </div>
-    </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label">Appid</label>
+        <label class="layui-form-label">描述</label>
         <div class="layui-input-block">
-            <input type="text" autofocus name="partner_appid" value="{$vo.partner_appid}" pattern="" title="" placeholder="合作伙伴小程序Appid" class="layui-input" style="width: 75%;">
-        </div>
-    </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label">跳转路劲</label>
-        <div class="layui-input-block">
-            <input type="text" autofocus name="jump_route" value="{$vo.jump_route}" pattern="" title="" placeholder="跳转路劲" class="layui-input" style="width: 75%;">
+            <input type="text" autofocus name="desc" value="{$vo.desc}" pattern="" title="" placeholder="描述" class="layui-input" style="width: 75%;">
         </div>
     </div>
     <div class="layui-form-item">
